# keymapper

./: .gitignore  LICENSE  README.md  build.ps1  cargo-build.bat  cargo-check.bat  cargo-check.ps1  index.html  package-lock.json  package.json  tauri-dev.bat  vite.config.ts
src/: App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.hermes/plans/: 2026-06-30-dualsense-input-migration.md
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/config/: mod.rs  types.rs
src-tauri/src/engine/: gamepad.rs  hook.rs  mapper.rs  mod.rs  simulate.rs
src/components/: KeyCapture.tsx
src/pages/: Devices.tsx  Logs.tsx  Mappings.tsx  Recorder.tsx  Settings.tsx
src/styles/: global.css
